--- a/css/slides.css
+++ b/css/slides.css
@@ -18,7 +18,7 @@ img {
 }
 
 .slides, html {
-	font-family: "Source Sans Pro", sans-serif
+	font-family: "Open Sans", sans-serif
 }
 
 .button.actionButton, .common-Link, .panel .menu, .popupTrigger, .sidebarTrigger, a {
@@ -1375,6 +1375,126 @@ a.globalFooterCard {
 #services .closeButton {
 	font-size: 16px
 }
+@keyframes pricing-hover {
+ 0% {
+  transform:scale(1)
+ }
+ 100% {
+  transform:scale(1.1)
+ }
+}
+.pricing-explained {
+	top: 0px;
+	width: 100%;
+	left: 0;
+	height: 400px;
+	position: absolute;
+	will-change: transform;
+	transition: transform .5s;
+}
+.pricing-explained .container-lg {
+	margin-top: 10%;
+	text-align: center;
+}
+.pricing-explained::before {
+	content:"";
+	position: absolute;
+	height: 55rem;
+	background-color: #FFF;
+	bottom: -55.375rem;
+	width: 100%;
+	left: 0;
+	z-index: 10;
+}
+.pricing-explained-cards>.wrapper {
+ padding-bottom:0 !important;
+ z-index:100;
+ position:relative
+}
+.price-shape {
+ position:absolute;
+ will-change:opacity;
+ transition:opacity .25s;
+ z-index:1
+}
+.pricing-explained-shapes .price-shape {
+	-webkit-filter: drop-shadow( 0px 3px 10px rgb(74, 144, 226) );
+	filter: drop-shadow( 0px 3px 10px rgb(74, 144, 226) );
+}
+.price-shape.shape-01 {
+ bottom:6.25rem;
+ left:5%
+}
+.price-shape.shape-02 {
+ bottom:4.375rem;
+ left:17%
+}
+.price-shape.shape-03 {
+ bottom:15rem;
+ left:12%
+}
+.price-shape.shape-04 {
+ bottom:7.5rem;
+ left:22%
+}
+.price-shape.shape-05 {
+ left:14%;
+ bottom:-50px
+}
+.price-shape.shape-06 {
+ left:68%;
+ bottom:100px
+}
+.price-shape.shape-07 {
+ left:47%;
+ bottom:300px
+}
+.price-shape.shape-08 {
+ bottom:-60px;
+ left:-100px
+}
+.price-shape.shape-09 {
+ left:85%;
+ bottom:-60px
+}
+.price-shape.shape-10 {
+ left:67%;
+ bottom:225px
+}
+.price-shape.shape-11 {
+ left:41%;
+ bottom:10px
+}
+.price-shape.shape-12 {
+ left:79%;
+ bottom:100px
+}
+.price-shape.shape-13 {
+ left:81%;
+ bottom:140px
+}
+.price-shape.shape-14 {
+ left:75%;
+ bottom:10px
+}
+.price-shape.shape-15 {
+ left:95%;
+ bottom:100px
+}
+.shape-ball {
+ will-change:transform;
+ transition:transform .3s
+}
+.pricing-explained-shapes {
+ bottom:0px;
+ width:100%;
+ left:0;
+ height:600px;
+ position:absolute;
+ will-change:transform;
+ transition:transform .5s
+}
+
 
 @media screen and (max-width:1024px) and (min-width:546px) {
 	.grid .col-5-10:not(.wide-col) {
