--- a/css/slides.css
+++ b/css/slides.css
@@ -307,6 +307,54 @@ a.globalFooterCard {
     background: rgba(0,0,140,.08);
 		margin-bottom: 15px;
 }
+.fun-fact {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 60px;
+    height: 80px;
+		border-radius: 5px;
+		box-shadow: 0 2px 9px 0 rgba(50,50,93,0.20);
+    margin-left: 0%;
+    padding: 40px 10px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    background: #1072BB;
+    color: #fff;
+    font-size: 50px;
+    font-weight: 700;
+    text-align: center;
+		position: absolute;
+}
+#steg p {font-size: 16px;}
+#steg h3 {margin-bottom: 0px;}
+.box-CTA {
+	  -webkit-box-shadow: 0 2px 20px rgba(0, 0, 0, .15);
+    box-shadow: 0 2px 20px rgba(0, 0, 0, .15);
+		width: 100%;
+		max-width: 640px;
+		border-radius: 5px;
+		background: #fff;
+    margin: 0 auto;
+		padding: 30px;
+}
+.box-CTA h2 {font-size: 22px !important;color: #32325d;}
+.box-CTA img {
+		width: 120px;
+		margin-top: -100px;
+}
 .section-Links {
     line-height: 2em;
     list-style-type: none;
