--- a/css/slides.css
+++ b/css/slides.css
@@ -1914,7 +1914,9 @@ section.ctas .cta .cta-headline {
 .formMessageAccepted img {
 	margin-left: 8%;
 }
-
+.mobileContactButtonFix {
+	display: none;
+}
 @media only screen and (min-width:320px) and (max-width:480px) {
 	.box-CTA {
 		margin-top: 80px;
@@ -1931,15 +1933,16 @@ section.ctas .cta .cta-headline {
 	.customers {
 		padding-top: 0px;
 	}
-
+	.mobileContactButtonFix {
+		display: block;
+		padding: 20px;
+		color: #32325d;
+	}
+	.formBackground {display: none !important;}
 	#omOss h2 {
 		font-size: 24px;
 		line-height: 34px;
 		word-wrap: break-word;
-	}
-
-	#omOss p {
-		text-align: left !important;
 	}
 
 	a.globalFooterCard {
