--- a/css/slides.css
+++ b/css/slides.css
@@ -233,7 +233,8 @@ a.globalFooterCard {
 	position: relative;
 	flex-direction: column;
 	justify-content: center;
-	border-radius: 4px
+	border-radius: 4px;
+	margin: 10px;
 }
 
 .common-Button {
