--- a/css/slides.css
+++ b/css/slides.css
@@ -515,7 +515,6 @@ p.hero {
 .slide {
 	background: #303030;
 	color: #fff;
-	z-index: 10
 }
 
 .slide.whiteSlide {
@@ -2166,7 +2165,56 @@ section.ctas .cta .cta-headline {
 		padding: 20px;
 		color: #32325d;
 	}
-	.formBackground {display: none !important;}
+	/* typeform overlay class */
+	.typeform-modal {
+    z-index: 99999 !important;
+	}
+	.FooterWrapper-sc-1bn1rrm-0 .jfsakS {
+		position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+	}
+	.css-141sqqa {
+    height: 40px !important;
+		width: 40px !important;
+    line-height: 40px !important;
+    padding: 10px !important;
+    background: #cd0a0a !important;
+    border-radius: 4px;
+	}
+	.css-13wt6a4 {
+		background-color: #fff !important;
+		right: 8px !important;
+	}
+	.css-fn00my {
+		background-color: #fff !important;
+		right: 8px !important;
+	}
+	.css-sdnp11 {
+		visibility: visible !important;
+    opacity: 1 !important;
+    background-color: #FFFFFF;
+    position: fixed !important;
+    z-index: 1000 !important;
+    left: 0 !important;
+    right: 0 !important;
+    top: 0 !important;
+    bottom: 0 !important;
+    overflow: hidden !important;
+    height: 100% !important;
+    -webkit-transition: all 400ms ease 0s;
+    transition: all 400ms ease 0s;
+	}
+	.css-sdnp11 iframe {
+		border: 0px;
+    min-height: 100%;
+    max-height: 100%;
+    max-width: 100%;
+    min-width: 100%;
+    width: 0px;
+    height: 1px;
+	}
 	#omOss h2 {
 		font-size: 24px;
 		line-height: 34px;
