Layout for popover form

--- a/css/slides.css
+++ b/css/slides.css
@@ -1376,6 +1376,12 @@ section .form-column {
 	margin: 0 30px 20px 0;
 }
 
+.popup .close {
+	top: 10% !important;
+	left: 0 !important;
+	right: 0 !important;
+}
+
 .formBackground {
 	border-radius: 4px;
 	-webkit-box-shadow: 0 50px 100px rgba(50, 50, 93, .1), 0 15px 35px rgba(50, 50, 93, .15), 0 5px 15px rgba(0, 0, 0, .1);
